# MiniProj

./: README.md
BrewSense/: main.py  raw_serial.py
arduino/SerialMotor/: joystick.py  serialMotor.ino  serialMotor_pmw.ino
etherCAT/ADS/: XY_Axis.py  xAxis.py
etherCAT/PS100E/: KS100E_Ecat_V1.5.xml  PS100E.xml
office/tableocr/: ocr_table.py
pico/servoSys/pulse_mode/: CMakeLists.txt  main.cpp
pico/servoSys/pulse_mode/drivers/: README.md  ps100.cpp  ps100.hpp  pwm_motor.cpp  pwm_motor.hpp
pico/servoSys/pulse_mode/drivers/test_program/: ps100_test.cpp  pwm_div_error_compare_scored.py  pwm_motor_test.cpp
pico/servoSys/pulse_mode/pio/: motor_exec.pio  pio_exec.cpp  pio_exec.hpp  pio_test.cpp  pio_test.hpp  radar_sync.pio
pico/servoSys/pulse_mode/pio/motor_exec/: motor_exec_ajustable_duty_cycle.pio  motor_exec_half_duty_cycle.pio  motor_exec_half_duty_cycle_v2.pio  motor_exec_step_only.pio
pico/servoSys/pulse_mode/pio/test_program/: pio_test.hpp
pico/servoSys/pulse_mode/timing/: pio_timing.cpp  pio_timing.hpp
pico/servoSys/pulse_mode/trajectory/: servoSys.cpp
rail_pose_engine/: README.md  rail_event_logger.py  rail_pose_engine.py  rail_pose_replay.py.py  time_align.py
